# web_scraper

./: pyproject.toml  scraper.py
